# pydantic2

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  menu.py  mkdocs.yml  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  user_cost.json  vercel.json
.cursor/rules/: base.mdc
devops/: debug.py  menu.py
docs/api/: client.md  usage.md
docs/examples/: basic-usage.md  django-integration.md  fastapi-integration.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: message-handling.md  structured-responses.md
responses/: response_20250314_184740_dfce8059.json
site/: 404.html  index.html
site/about/changelog/: index.html
site/about/contributing/: index.html
site/about/license/: index.html
site/about/roadmap/: index.html
site/about/security/: index.html
site/about/team/: index.html
site/api/agents/: index.html
site/api/client/: index.html
site/api/models/: index.html
site/api/usage/: index.html
site/examples/agent-system/: index.html
site/examples/basic-usage/: index.html
site/examples/django-integration/: index.html
site/examples/fastapi-integration/: index.html
site/getting-started/configuration/: index.html
site/getting-started/installation/: index.html
site/getting-started/quick-start/: index.html
site/guides/budget-management/: index.html
site/guides/message-handling/: index.html
site/guides/structured-responses/: index.html
site/guides/usage-tracking/: index.html
site/search/: search_index.json
src/: .gitignore
src copy/examples/startup_form/: agents.py  dialog.py  original.py  test.py
src copy/pydantic2/: __init__.py
src copy/pydantic2/agents/: readme.progress_form.md
src copy/pydantic2/client/: message_handler.py
src copy/pydantic2/client/usage/: model_prices.py  usage_info.py
src.old/examples/: django-drf.py  simple_chat.py
src.old/pydantic2/: .gitignore  __pack__.py
src.old/pydantic2/agents/: progress_form.py  session_db_manager.py
src.old/pydantic2/utils/: __init__.py  logger.py
src.old/pydantic2/utils/version_control/: check.py
src/examples/: agents.py  django-drf.py  llm.py  prices.py  simple_chat.py  startup_form.py  startup_form_best.py  startup_simple_agent.py
src/examples/startup_form/: test.py
src/pydantic2/: .gitignore  __init__.py  __pack__.py
src/pydantic2/agents/: README.md  __init__.py  progress_form.py  readme.progress_form.md  session_db_manager.py  simple_agent.py
src/pydantic2/client/: __init__.py  exceptions.py  litellm_client.py  message_handler.py  pydantic_ai_client.py
src/pydantic2/client/models/: base_models.py
src/pydantic2/client/prices/: get_models.py  prices_litellm.py  prices_openrouter.py
src/pydantic2/client/prices/data/: litellm_models.json  openrouter_models.json
src/pydantic2/client/usage/: model_prices.py  usage_class.py  usage_info.py
src/pydantic2/config/: config.py
src/pydantic2/examples/: simple_chat.py
src/pydantic2/models/: base_models.py
src/pydantic2/utils/: __init__.py  cli.py  config.py  logger.py
src/pydantic2/utils/version_control/: check.py
src/pydantic2_old/: __init__.py
src/pydantic2_old/agents/: simple_agent.py
src/pydantic2_old/client/: litellm_client.py  message_handler.py
src/pydantic2_old/client/models/: base_models.py
src/pydantic2_old/client/prices/: __init__.py
src/pydantic2_old/client/prices/data/: openrouter_models.json
tests/: llm.py  test_agents.py  test_client.py  test_litellm.py  test_usage_stats.py  test_version_control.py
tests/custom_providers/: mistral.py
www/: mkdocs.yml
www/docs/: cli.md  index.md
www/docs/about/: changelog.md  contributing.md  license.md  roadmap.md  security.md  team.md
www/docs/agents/: progress-form.md
www/docs/api/: agents.md  client.md  models.md  usage.md
www/docs/core-concepts/: budget-management.md  error-handling.md  message-handling.md  online-search.md  type-safe-responses.md
www/docs/core-concepts/usage/: info.md  model-pricing.md  request-tracking.md
www/docs/examples/: agent-progress-form.md  agent-system.md  basic-usage.md  chat-completion.md
www/docs/getting-started/: configuration.md  installation.md  quick-start.md
www/docs/guides/: budget-management.md  message-handling.md  usage-tracking.md
www/docs/integrations/: django-drf.md
www/docs/overrides/partials/: copyright.html
www/overrides/partials/: footer.html
www/site/: 404.html  index.html  objects.inv  sitemap.xml
www/site/agents/progress-form/: index.html
www/site/api/client/: index.html
www/site/api/usage/: index.html
www/site/cli/: index.html
www/site/core-concepts/budget-management/: index.html
www/site/core-concepts/error-handling/: index.html
www/site/core-concepts/message-handling/: index.html
www/site/core-concepts/online-search/: index.html
www/site/core-concepts/type-safe-responses/: index.html
www/site/core-concepts/usage/info/: index.html
www/site/core-concepts/usage/model-pricing/: index.html
www/site/core-concepts/usage/request-tracking/: index.html
www/site/examples/agent-progress-form/: index.html
www/site/examples/basic-usage/: index.html
www/site/examples/chat-completion/: index.html
www/site/getting-started/configuration/: index.html
www/site/getting-started/installation/: index.html
www/site/getting-started/quick-start/: index.html
www/site/integrations/django-drf/: index.html
www/site/search/: search_index.json
