[build-system]
requires = ["setuptools", "wheel", "pytest"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = ".git,__pycache__,dist,build,.venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
