[metadata]
name = pydantic2
version = 2.0.2
description = A powerful AI framework with structured Pydantic responses, flexible LLM integration, and advanced agent capabilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Unrealos
author_email = info@unrealos.com
url = https://github.com/markolofsen/pydantic2
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: Linguistic
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

project_urls =
    Source = https://github.com/markolofsen/pydantic2
    Tracker = https://github.com/markolofsen/pydantic2/issues
    Documentation = https://pydantic.unrealos.com/
    Homepage = https://pydantic.unrealos.com/

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    litellm
    pydantic
    diskcache
    smolagents
    colorlog
    drf-pydantic
    typing-extensions
    pyyaml
    peewee
    instructor
[options.extras_require]
ui =
    smolagents[gradio]
dev =
    pytest
    pytest-cov
    black
    flake8
    isort
    build
    twine
all =
    %(ui)s
    %(dev)s

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist,*.egg-info
ignore = E203, W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --disable-warnings

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
