[metadata]
name = pydantic2
version = 2.1.6
description = A powerful AI framework with structured Pydantic responses, flexible LLM integration, and advanced agent capabilities
author = Unrealos
author_email = info@unrealos.com
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pydantic.unrealos.com/
project_urls = 
	Homepage = https://pydantic.unrealos.com/
	Documentation = https://pydantic.unrealos.com/
	Source = https://github.com/markolofsen/pydantic2
	Tracker = https://github.com/markolofsen/pydantic2/issues
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Intended Audience :: Science/Research
	Topic :: Software Development :: Libraries
	Topic :: Scientific/Engineering :: Artificial Intelligence
	Topic :: Text Processing :: Linguistic
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
python_requires = >=3.11
packages = find:
package_dir = 
	= src
include_package_data = True
zip_safe = False
install_requires = 
	pydantic-ai>=0.0.40
	colorlog>=6.7.0
	typing-extensions>=4.10.0
	peewee>=3.17.0
	beautifulsoup4>=4.12.0
	pyyaml>=6.0.2
	python-dotenv>=1.0.1
	datasette>=0.65.1
	click>=8.1.7
	aiohttp>=3.11.14

[options.package_data]
pydantic2 = 
	client/*.py
	utils/*.py
	db/*.py
	**/*.py

[options.packages.find]
where = src
include = pydantic2*

[options.entry_points]
console_scripts = 
	pydantic2 = pydantic2.utils.cli:cli
	pydantic2-view-models = pydantic2.utils.cli:view_models
	pydantic2-view-usage = pydantic2.utils.cli:view_usage
	pydantic2-view-all = pydantic2.utils.cli:view_all

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --disable-warnings

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[flake8]
max-line-length = 88
extend-ignore = E203

